re-arranged the file structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="HAAANOO.css" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
     <title>HAAANOO</title>
   </head>
   <body>
     <section class="showcase">
       <video
-        src="Pink Flying Hearts Background Loop Free Video Animation Stock Footage Motion Gra.mp4"
+        src="./assets/images/Pink Flying Hearts Background Loop Free Video Animation Stock Footage Motion Gra.mp4"
         muted
         loop
         autoplay
@@ -28,6 +28,6 @@
         </div>
       </div>
     </section>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
