edited the html markup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="showcase">
-      <video
+      <video style="opacity:40%;"
         src="./assets/images/Pink Flying Hearts Background Loop Free Video Animation Stock Footage Motion Gra.mp4"
         muted
         loop
@@ -17,7 +17,7 @@
       ></video>
       <div class="main">
         <div class="text">
-            <p style="line-height: -6rem;">.</p>
+            <p style="line-height: -6rem; opacity: 0;">.</p>
           <p class="h1">Will you</p>
           <p class="h2">accept</p>
           <p class="h3">THE JOB</p>
