--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="text">
             <p style="line-height: -6rem; opacity: 0;">.</p>
           <p class="h1">Will you</p>
-          <p class="h2">accept</p>
-          <p class="h3">THE JOB</p>
+          <p class="h2">be My</p>
+          <p class="h3">VALENTINE ?</p>
         </div>
         <div class="buttons">
           <button class="btn">YES</button>
